--- a/source/app/build.gradle
+++ b/source/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
 
+    //ADD RECYLCLER VIEW DEP
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
 }
