--- a/source/app/build.gradle
+++ b/source/app/build.gradle
@@ -51,6 +51,6 @@ dependencies {
     testImplementation "androidx.room:room-testing:$room_version"
 
     //ADD RECYLCLER VIEW DEP
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
 }
