--- a/source/app/src/main/AndroidManifest.xml
+++ b/source/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddPersonActivity"></activity>
+        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".AddPersonActivity" />
         <activity android:name=".ListPersons" />
         <activity android:name=".MainActivity">
             <intent-filter>
